# ProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/cmake/: MyProjectConfig.cmake.in
lib/include/mylib/: mylib.hpp
lib/src/: calculator.cpp
tests/: CMakeLists.txt  calculator_test.cpp
